--- a/src/pages/signin/signin.css
+++ b/src/pages/signin/signin.css
@@ -12,7 +12,7 @@
     padding-bottom: 10px;
 }
 .signin-cointained{
-    border: 2px solid white;
+    border: 5px solid white;
     backdrop-filter: blur(5px);
     padding: 40px;
     border-radius: 10px;
@@ -54,11 +54,12 @@
     align-items: center;
     padding: 10px;
     margin-bottom: 13px;
-    min-width:270px ;
+    min-width:100%;
     color: #fff;
     background:hsl(0, 0%, 100%);
 }
 .username, .password{
+    flex: 1;
     background: transparent;
     border: 0;
     color: gray;
@@ -88,12 +89,13 @@ input[type="checkbox"]{
 }
 .agree a{
     color: hsl(0, 0%, 70%);
+    text-decoration: none;
 }
 .agree a:hover{
-    color: #fff;
+    color: skyblue;
 }
 .login-button{
-    min-width: 270px;
+    min-width: 100%;
     padding: 10px 0px;
     margin-top: 15px;
     background-image: linear-gradient(hsl(221, 94%, 61%),hsl(221, 94%, 50%));
@@ -106,4 +108,92 @@ input[type="checkbox"]{
 .login-button:hover{
     background-image:linear-gradient(hsl(221, 94%, 50%), hsl(221, 94%, 61%)) ;
     
+}
+.tearms-cointainer{
+    margin-top: 5px;
+}
+.other-option-cointainer{
+    min-width: 100%;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    margin-top: 10px;
+}
+.optiontext a{
+    text-decoration: none;
+    color: hsl(0, 0%, 70%);
+}
+.optiontext a:hover{
+    color: skyblue;
+}
+
+@media screen and (max-width:800px) {
+    .signin-page{
+        flex-direction: column;
+        height:100vh;
+        
+    }
+    .signin-img{
+        width: 100%;
+        padding: 50px;
+        height: 25%;
+    }
+    .signin-form{
+        width: 100%;
+        padding-top:15px ;
+        padding-bottom: 50px;
+        height: 75%;
+    }
+}
+@media screen and (max-width:500px){
+    .signin-cointained{
+        width: 75%;
+    }
+    
+}
+@media screen and (max-width:470px) {
+    .user-logo, .lock-logo, .openeye-logo, .closeeye-logo{
+        min-width: 20px;
+        min-height: 20px;
+    }    
+    .signin-cointained{
+        padding: 20px;
+    }
+    
+}
+@media screen and (max-width:415px) {
+    .password{
+        width: 170px;
+    }
+}
+@media screen and (max-width:415px) {
+    .password{
+        width: 150px;
+    }
+}
+@media screen and (max-width:370px) {
+    .password{
+        width: 140px;
+    }
+}
+@media screen and (max-width:360px) {
+    .password{
+        width: 130px;
+    }
+}
+@media screen and (max-width:350px) {
+    .password{
+        width: 120px;
+    }
+}
+
+@media screen and (max-width:330px) {
+    .password{
+        width: 110px;
+    }
+}
+@media screen and (max-width:315px) {
+    .password{
+        width: 100px;
+    }
 }
