--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -47,7 +47,7 @@
   gap: 15px;
 }
 .search {
-  width: 300px;
+  width: 100%;
   height: 30px;
   padding: 7px;
   cursor: pointer;
@@ -60,7 +60,11 @@
   outline: 2px solid hsl(226, 36%, 39%);
 }
 
-.right-arrow {
+.toggler{
+  display: none;
+}
+
+.right-arrow, .toggler {
   width: 30px;
   height: 20px;
   fill: hsl(226, 36%, 39%);
@@ -71,6 +75,8 @@
 .right-arrow-rot{
   transform: rotate(180deg);
 }
+
+
 
 .search-cointainer {
   display: flex;
@@ -98,6 +104,44 @@
   cursor: pointer;
   width: fit-content;
   height: fit-content;
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-logo>.logo-container{
+  width: fit-content;
+  padding: 10px;
+  box-shadow: 5px 5px 5px gray;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 10;
+  background-color: white;
+  border-radius: 12px;
+
+
+  position: absolute;
+  bottom: -160px;
+  right: 0%;
+
+  display: none;
+}
+
+.profile-logo:hover>.logo-container{
+  display: flex;
+}
+
+.profile-logo>.logo-container>*{
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+  padding: 7px 5px;
+}
+.profile-logo>.logo-container>h4:hover{
+  background-color: rgb(224, 219, 219);
 }
 
 .profile-logo>svg{
@@ -120,4 +164,37 @@
 
 #id {
   background: #000;
+}
+
+@media screen and (max-width:950px) {
+  .right-arrow, .bell-logo{
+    min-width: 30px;
+    min-height: 20px;
+  }
+
+  
+}
+@media screen and (max-width:600px) {
+  .header-left{
+    width: 80%;
+  }
+  .header-right{
+    width: 20%;
+  }
+  .profile-logo>svg{
+    margin-left: 5px;
+  }
+  
+}
+@media screen and (max-width:600px) {
+  .header-left{
+    width: 65%;
+  }
+  .header-right{
+    width: 20%;
+  }
+  .header{
+    justify-content: space-between;
+  }
+
 }
