--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-
 }
 .body-long {
   width: 90%;
@@ -60,11 +59,12 @@
   outline: 2px solid hsl(226, 36%, 39%);
 }
 
-.toggler{
+.toggler {
   display: none;
 }
 
-.right-arrow, .toggler {
+.right-arrow,
+.toggler {
   width: 30px;
   height: 20px;
   fill: hsl(226, 36%, 39%);
@@ -72,11 +72,9 @@
   cursor: pointer;
 }
 
-.right-arrow-rot{
+.right-arrow-rot {
   transform: rotate(180deg);
 }
-
-
 
 .search-cointainer {
   display: flex;
@@ -100,7 +98,7 @@
   padding-right: 10px;
 }
 
-.profile-logo{
+.profile-logo {
   cursor: pointer;
   width: fit-content;
   height: fit-content;
@@ -111,7 +109,7 @@
   justify-content: center;
 }
 
-.profile-logo>.logo-container{
+.profile-logo > .logo-container {
   width: fit-content;
   padding: 10px;
   box-shadow: 5px 5px 5px gray;
@@ -122,7 +120,6 @@
   background-color: white;
   border-radius: 12px;
 
-
   position: absolute;
   bottom: -160px;
   right: 0%;
@@ -130,21 +127,21 @@
   display: none;
 }
 
-.profile-logo:hover>.logo-container{
+.profile-logo:hover > .logo-container {
   display: flex;
 }
 
-.profile-logo>.logo-container>*{
+.profile-logo > .logo-container > * {
   width: 100%;
   text-align: center;
   cursor: pointer;
   padding: 7px 5px;
 }
-.profile-logo>.logo-container>h4:hover{
+.profile-logo > .logo-container > h4:hover {
   background-color: rgb(224, 219, 219);
 }
 
-.profile-logo>svg{
+.profile-logo > svg {
   width: 25px;
   height: 25px;
   fill: hsl(226, 36%, 39%);
@@ -166,35 +163,43 @@
   background: #000;
 }
 
-@media screen and (max-width:950px) {
-  .right-arrow, .bell-logo{
+@media screen and (max-width: 950px) {
+  .right-arrow,
+  .bell-logo {
     min-width: 30px;
     min-height: 20px;
   }
-
-  
 }
-@media screen and (max-width:600px) {
-  .header-left{
+@media (max-width: 800px) {
+  .header {
+    width: 100%;
+    border-radius: 0px;
+  }
+  .sub-body {
+    padding: 3px;
+    width: 100%;
+    border-radius: 0px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .header-left {
     width: 80%;
   }
-  .header-right{
+  .header-right {
     width: 20%;
   }
-  .profile-logo>svg{
+  .profile-logo > svg {
     margin-left: 5px;
   }
-  
 }
-@media screen and (max-width:600px) {
-  .header-left{
+@media screen and (max-width: 600px) {
+  .header-left {
     width: 65%;
   }
-  .header-right{
+  .header-right {
     width: 20%;
   }
-  .header{
+  .header {
     justify-content: space-between;
   }
-
 }
