adding user profile page

--- a/src/components/body/body.css
+++ b/src/components/body/body.css
@@ -151,6 +151,14 @@
   padding: 3px;
   border-radius: 50px;
 }
+
+.profile-logo > img {
+  width: 35px;
+  height: 35px;
+  transition: fill 0.3s ease;
+  cursor: pointer;
+  border-radius: 50px;
+}
 .bell-logo {
   width: 20px;
   height: 20px;
