--- a/src/components/payslip/payslip.css
+++ b/src/components/payslip/payslip.css
@@ -11,6 +11,14 @@
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
+.payslip > h2 {
+  font-size: 24px;
+  font-weight: 600;
+  color: hsl(226, 36%, 35%);
+  text-transform: uppercase;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+}
+
 .select-Y-M-cointainer div {
   font-size: 20px;
   font-weight: 700;
