--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -107,7 +107,11 @@
   margin: 13px 0;
 }
 .task-title {
+  font-size: 24px;
   font-weight: 600;
+  color: hsl(226, 36%, 35%);
+  text-transform: uppercase;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 }
 .count {
   font-size: 25px;
