--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -36,8 +36,10 @@
 /* Form Styling */
 .profile-info {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   row-gap: 20px;
-  column-gap: 100px;
+  column-gap: 50px;
   flex-wrap: wrap;
   margin-top: 20px;
   padding: 20px;
@@ -51,6 +53,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  min-width: 45%;
+  max-width: 45%;
 }
 
 .box-layout-coinntainer p {
@@ -61,7 +65,7 @@
 }
 
 /* Input Fields */
-input {
+.box-layout-coinntainer input {
   width: 100%;
   padding: 10px;
   border-radius: 6px;
@@ -71,7 +75,7 @@ input {
   transition: all 0.3s ease;
 }
 
-input:focus {
+.box-layout-coinntainer input:focus {
   box-shadow: 0px 0px 8px rgba(33, 150, 243, 0.6);
   border: 1px solid #2196f3;
 }
@@ -150,13 +154,20 @@ input:focus {
     width: 90%;
   }
 }
+@media (max-width: 590px) {
+  .box-layout-coinntainer {
+    min-width: 40%;
+    max-width: 40%;
+  }
+}
 @media (max-width: 430px) {
   .profile-info {
     flex-direction: column;
     align-items: center;
   }
   .box-layout-coinntainer {
-    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
   }
   .profile-info {
     gap: 20px;
