--- a/src/components/bug-detail-page/bugDetailPage.css
+++ b/src/components/bug-detail-page/bugDetailPage.css
@@ -11,7 +11,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.bugDetailPage > .titleCont > h2 {
+  max-width: 70%;
 }
 
 .bugDetailPage > .titleCont > button {
@@ -87,7 +91,8 @@
 }
 .error-img {
   flex: 1;
-  max-width: 300px;
+  max-width: 600px;
+  min-width: 250px;
   height: auto;
   padding: 10px;
   border-radius: 15px;
