--- a/src/components/bug-detail-page/bugDetailPage.css
+++ b/src/components/bug-detail-page/bugDetailPage.css
@@ -193,6 +193,14 @@
 }
 
 /* Replies */
+
+.reply-header{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
 .replies {
   margin-top: 10px;
   padding-left: 15px;
