--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -12,7 +12,7 @@
     justify-content: start;
     padding: 20px 5px;
 
-    background-color: #4152ba;
+    background-color: #41528a;
 
     z-index: 999;
 
