--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,89 +1,36 @@
-
-    .dashboard-container {
-        width: 18%;
-        height: 100vh;
-        background: #41528a;
-        display: flex;
-        flex-direction: column;
-        padding: 20px 0;
-        gap: 15px;
+.dashboard {
+    text-align: center;
+    padding: 20px;
+    flex: 1;
+  }
+  
+  h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  .charts-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  
+  /* On larger screens, display charts side by side */
+  @media (min-width: 768px) {
+    .charts-container {
+      flex-direction: row;
+      justify-content: center;
     }
-    .dashboard-short{
-        width: min-content;
+  
+    .chart {
+      width: 45%;
     }
-
-    .sitelogo img {
-        width: 100%;
-        height: auto;
-        padding: 0 25px;
-    }
-    #small-logo {
-        width: 100%;
-        height: auto;
-        padding: 0 10px;
-    }
-    .sitelogo {
-        display: flex;
-        justify-content: center;
-    }
-    
-    .menu-name {
-        font-size: 14px;
-        font-weight: 700;
-        color: hsl(226, 36%, 65%);
-        padding-left: 15px;
-        padding-bottom: 20px;
-    }
-    
-    .menu {
-        display: flex;
-        flex-direction: column;
-        padding: 0px 20px;
-        gap: 20px;
-    }
-    
-    .menu nav {
-        display: flex;
-        gap: 12px;
-        align-items: center;
-        cursor: pointer;
-        transition: color 0.3s ease;
-    }
-    
-    .logo {
-        width: 20px;
-        height: 20px;
-        fill: hsl(226, 36%, 80%);
-        transition: fill 0.3s ease;
-    }
-    
-    .menu nav p {
-        color: hsl(226, 36%, 80%);
-        font-weight: 500;
-        transition: color 0.3s ease;
-        
-    }
-    
-    /* Change text and icon color on hover */
-    nav.hovered:hover .logo{
-        fill: white;
-    }
-    
-    nav.hovered:hover p{
-        color: white;
-    }
-    nav.activeNav .logo{
-        fill: white;
-    }
-    
-    nav.activeNav p{
-        color: white;
-    }
-
-    @media screen and (max-width:1000px) {
-        .logo{
-            min-width: 20px;
-            min-height: 20px;
-        }
-        
-    }
+  }
+  
+  /* Full width charts on mobile */
+  .chart {
+    width: 100%;
+    max-width: 500px;
+  }
+  
